# platformer_3d_bevy

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/levels/: prototype.map
mobile/: Cargo.toml
mobile/src/: lib.rs
src/: level.rs  lib.rs  main.rs  menu.rs  player.rs  trenchbroom_setup.rs
trenchbroom/: GameConfig.cfg  platformer_3d_demo_bevy.fgd
